--- a/src/Components/Clients/client.css
+++ b/src/Components/Clients/client.css
@@ -43,12 +43,31 @@
     box-shadow: 0 2px gray;
     padding-left: 5px;
 }
-.popup{
-    width: 100px;
-    height:200px;
-    display: flex;
-    flex-direction: column;
-} 
+.popup {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    background-color: rgba(0, 0, 0, 0.50);
+    /* background-color: yellow; */
+    top: 0;
+    right: 0;
+    z-index: 1;
+    /* grid-template-columns: 1fr 3fr 1fr */
+}
+
+.form {
+    background-color: #fff;
+    width: 100%;
+    max-width: 500px;
+    display: grid;
+    padding: 20px;
+    grid-gap: 10px;
+}
+
+
  /* .popup-content{
     position: absolute;
     z-index: 2;
