--- a/src/Components/Clients/client.css
+++ b/src/Components/Clients/client.css
@@ -1,6 +1,6 @@
-.allClients{
+/* .allClients{
     color:black;
-}
+} */
 .dataBar{
     height: 5vh;
     font-size: 14px;
@@ -50,11 +50,10 @@
     display: grid;
     justify-content: center;
     align-content: center;
-    background-color: rgba(0, 0, 0, 0.50);
     /* background-color: yellow; */
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: 0;
     /* grid-template-columns: 1fr 3fr 1fr */
 }
 
@@ -65,6 +64,7 @@
     display: grid;
     padding: 20px;
     grid-gap: 10px;
+    z-index: 1;
 }
 
 
