--- a/src/Components/Analytics/analytics.css
+++ b/src/Components/Analytics/analytics.css
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
+    padding: 16px;
     
 }
 
@@ -54,4 +55,9 @@
 }
 #emailBad{
     background-color: #3498db;
+}
+#employeeChart{
+    font-weight: 700;  
+    display: grid;
+    grid-gap: 16px;
 }
